--- a/femmehacks2016/app/views/style.css
+++ b/femmehacks2016/app/views/style.css
@@ -3,68 +3,108 @@ html{
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box; 
 }
+
+#header{
+	height: 50px;
+	width: 100%;
+	background: #1bcdc2;
+	
+	
+}
 body{
-	background-color: #22bbad;
+	background-color: #efefef;
 	color: black;
 	font-family: sans-serif;
 	font-size: 12px;
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box; 
+}
+
+p{
+	
+}
+
+h4{
+	font-weight: 200;
+	color: #606060;
+	line-height: 0px;
+}
+#body-box{
+	width:95%;
+	height: 100%;
+	margin-top:30px;
+	margin-left: auto;
+	margin-right: auto;
+	background: white;
+	position: relative;
 	
 	
 }
 
-#body-box{
-	width:100%;
-	height: 100%;
-	background: white;
-	
-}
+
 
 .filter-box{
 	width:15%;
 	height:200px;
-	background: grey;
+	background: #eeeeee;
+	border: #d9d9d9;
+	border-style: solid;
+	border-width: 1px;
 	display: inline-block;
 	margin:20px;
+	text-align: center;
+}
+
+.filter-box input{
+	margin-top:10px;
+	margin-left: 10px;
 	
+}
+
+.search-box{
+	width:70%;
+	border-style: none;
+}
+
+.search-action{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	background: #1bcdc2;
+	border-style: none;
+	color:white;
 }
 
 #scholarship-list{
 	width:70%;
 	display: inline-block;
+	position: relative;
+	top:-50px;
 	
 }
 
-#scholarship-table{
+#scholarship-table, #scholarship-table tr{
+
+	border: black;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-color: #e3e3e3;
+	border-width: 1px;
+	border-collapse: collapse;
+	}
 	
-	
-	
-}
+
 #scholarship-table th{
 	font-weight: 600;
 	text-align:center;
 	width:150px;
 	padding:10px;
-
-
-	
 }
 
-#scholarship-table tr{	
-	border-top-style: solid;
-	border-top-color: #bdbdbd;
-	border-top-width: 1px;
-	}
 	
 #scholarship-table td{
 	
 	text-align:center;
 	border: 20px;
 	width:150px;
-	
-	
-	
-	
+	padding-top:20px;
+	padding-bottom:20px;
 }
