--- a/femmehacks16v2/app/views/profile/profile.html
+++ b/femmehacks16v2/app/views/profile/profile.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Write a title here</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+    -->
+    <script src="profile.js" type="text/javascript">
 
+    </script>
     <link rel="stylesheet" href="style.css" harset="utf-8">
   </head>
   <body>
     <div class="body">
       <!-- Left profile box - Overview -->
-      <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 cl-sm-6">
         <div class="box-frame">
           <h3>Overview</h3>
           <h6>Public/Private</h6>
@@ -24,13 +28,14 @@
           <h6>Campus Setting</h6>
           <p>Urban</p>
           <h6>Campus Location</h6>
-          <p>Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
-          Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
-          Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
-          Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
-          Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
-          Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah</p>
-          <a href="see more">See More>>></a>
+          <div class="expandable">
+            <p>Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah</p>
+          </div>
           <h6>General Introlduction</h6>
           <p>Private</p>
           <h6>Public/Private</h6>
