update profile page, js and css

--- a/femmehacks16v2/app/views/profile/profile.html
+++ b/femmehacks16v2/app/views/profile/profile.html
@@ -13,21 +13,21 @@
     <link rel="stylesheet" href="style.css" harset="utf-8">
   </head>
   <body>
-    <div class="body">
+    <div class="mainsection">
       <!-- Left profile box - Overview -->
       <div class="col-md-4 cl-sm-6">
         <div class="box-frame">
-          <h3>Overview</h3>
-          <h6>Public/Private</h6>
+          <p class="sectionHeading">Overview</p>
+          <div class="subHeading">Public/Private</div>
           <p>Private</p>
-          <h6>Ranking</h6>
+          <div class="subHeading">Ranking</div>
           <p>#7 US News / #14 Times / #12 Q.S</p>
-          <h6>Total Enrollment</h6>
+          <div class="subHeading">Total Enrollment</div>
           <p>Undergrade 11765</p>
           <p>Graduate 13067</p>
-          <h6>Campus Setting</h6>
+          <div class="subHeading">Campus Setting</div>
           <p>Urban</p>
-          <h6>Campus Location</h6>
+          <div class="subHeading">Campus Location</div>
           <div class="expandable">
             <p>Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
             Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
@@ -35,26 +35,76 @@
             Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
             Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
             Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah</p>
-          </div>
-          <h6>General Introlduction</h6>
-          <p>Private</p>
-          <h6>Public/Private</h6>
-          <p>Private</p>
-
-        </div>
-      </div>
+          </div> <!--cloase expandable-->
+          <div class="subHeading">General Introlduction</div>
+          <div class="expandable">
+            <p>Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah
+            Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah Located in the blah blah blah blah</p>
+          </div> <!-- Close Expandable -->
+        </div> <!-- Close boxframe -->
+      </div> <!-- Close main column -->
         <!-- Center profile box - Fin Info -->
       <div class="col-md-4 col-sm-6">
-        <p>
-          2
-        </p>
-      </div>
+        <div class="box-frame">
+          <p class="sectionHeading">Financial Information</p>
+          <div class="subHeading">Tuition and Fees</div>
+          <p>43,738 USD</p>
+          <div class="subHeading">Books and Supplies</div>
+          <p>1,210 USD</p>
+          <div class="subHeading">Total on Campus</div>
+          <p>59,600 USD</p>
+          <div class="subHeading">Average Scholarship</div>
+          <p>2,000 USD</p>
+          <div class="subHeading">Average Loan</div>
+          <p>10,000 USD</p>
+          <div class="subHeading">Scholorship Opportunity</div>
+          <p>
+            You are viewing as a visitor, sign in and provide your detailed profile for more customized financial information.
+            <a href="#">Go sign in>>></a>
+          </p>
+        </div> <!-- Close boxframe -->
+      </div> <!-- Close main column -->
         <!-- Right profile box - Popular Programs & Student Comments -->
       <div class="col-md-4 col-sm-6">
-        <p>
-          3
-        </p>
-      </div>
-    </div>
+        <div class="box-frame">
+          <p class="sectionHeading">Popular Programs</p>
+          <p>
+            <span class="programType">Master</span>
+            <span class="programDetail">MSE in Nanotechnology</span>
+          </p>
+          <p>
+            <span class="programType">Master</span>
+            <span class="programDetail">Master of Environmental Studies</span>
+          </p>
+          <p>
+            <span class="programType">PhD</span>
+            <span class="programDetail">PhD in Applied Economics</span>
+          </p>
+          <p>
+            See all Programs at #####
+          </p>
+        </div> <!-- Close boxframe -->
+        <div class="box-frame">
+          <p class="sectionHeading">Student Comments</p>
+          <p class="text-right">latest</p>
+          <p>
+            <span class="commentStudentName">Jackie Mai:</span>
+            <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
+          </p>
+          <p>
+            <span class="commentStudentName">Jackie Mai:</span>
+            <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
+          </p>
+          <p>
+            <span class="commentStudentName">Jackie Mai:</span>
+            <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
+          </p>
+        </div> <!-- Close boxframe -->
+      </div> <!-- Close main column -->
+    </div> <!-- Close body class -->
   </body>
 </html>
