--- a/femmehacks16v2/app/views/profile/style.css
+++ b/femmehacks16v2/app/views/profile/style.css
@@ -1,12 +1,45 @@
 h6  {
   font-weight: bold;
+
 }
 
-.showhide {
+.box-frame {
+  margin: 36px 16px;
+  border: 1px solid darkgray;
+  padding: 12px;
+}
+
+.sectionHeading {
+  font-size: 18px;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 18px;
+}
+
+.subHeading {
+  font-weight: bold;
+}
+
+.showhide, a{
   color: red;
 }
 
-.showhide:hover {
+.showhide:hover, a:hover{
   color: green;
   text-decoration: underline;
+}
+
+.programType {
+  font-weight: bold;
+}
+
+.programDetail {
+
+}
+
+.commentStudentName {
+  font-weight: bold;
+}
+
+.commentStudentText {
+
 }
