--- a/femmehacks2016/app/views/style.css
+++ b/femmehacks2016/app/views/style.css
@@ -8,8 +8,42 @@ html{
 	height: 50px;
 	width: 100%;
 	background: #1bcdc2;
+	color:white;
+	vertical-align: bottom;
+	margin-top:0;
+	margin-bottom: 0;
 	
 	
+}
+#header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    
+}
+
+#header li {
+    float: left;
+    list-style: none;
+}
+
+#header li a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#header li a:hover {
+	color:black;
+    background-color: ;
+}
+
+#header .active{
+	color:black;
+
 }
 body{
 	background-color: #efefef;
@@ -25,6 +59,11 @@ p{
 h1{
 	font-size: 18px;
 	
+}
+h2{
+	font-size: 12px;
+
+
 }
 h4{
 	font-weight: 200;
@@ -46,13 +85,14 @@ h4{
 
 
 .filter-box{
-	width:15%;
+	
 	height:200px;
+	width: 180px;
 	background: #eeeeee;
 	border: #d9d9d9;
 	border-style: solid;
 	border-width: 1px;
-	display: inline-block;
+	
 	margin:20px;
 	text-align: center;
 }
@@ -64,8 +104,9 @@ h4{
 }
 
 .search-box{
-	width:70%;
+	
 	border-style: none;
+	
 }
 
 .search-action{
@@ -78,14 +119,13 @@ h4{
 }
 
 #scholarship-list{
-	width:70%;
-	display: inline-block;
-	position: relative;
-	top:-50px;
+	
+
 	
 }
 
 #scholarship-table, #scholarship-table tr{
+	
 
 	border: black;
 	border-top-style: solid;
@@ -112,3 +152,21 @@ h4{
 	padding-top:20px;
 	padding-bottom:20px;
 }
+
+.page-index{
+	
+	text-align:center;
+	margin-top:30px;
+	
+	
+}
+
+.page-index td{
+	width:20px;
+	height: 20px;
+	margin: 20px;
+	background: #ebebeb;
+	border: white;
+	border-style: solid;
+	
+	}
