--- a/femmehacks16v2/app/views/layouts/application.html.erb
+++ b/femmehacks16v2/app/views/layouts/application.html.erb
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Femmehacks16v2</title>
+  <title>Femmehacks2016</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="header">
+	<ul>
+  <li><a class="active" href="">TitleLogo</a></li>
+  <li><a href="">Scholarships</a></li>
+  <li><a href="">Schools</a></li>
+  <li><a href="">Forum</a></li>
+   </ul>
+	
+	</div>
+	
 <%= link_to 'Home', root_path %> | <%= link_to "Scholarships", '/scholarships' %>
 <%= yield %>
 
