--- a/femmehacks16v2/app/views/scholarships/_form.html.erb
+++ b/femmehacks16v2/app/views/scholarships/_form.html.erb
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+#value - make it the id of the category object
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
