--- a/femmehacks16v2/app/views/scholarships/index.html.erb
+++ b/femmehacks16v2/app/views/scholarships/index.html.erb
@@ -7,11 +7,8 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Organization</th>
       <th>Amount</th>
       <th>Deadline</th>
-      <th>Eligibility</th>
-      <th>Link</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,16 +16,11 @@
   <tbody>
     <% @scholarships.each do |scholarship| %>
       <tr>
-        <td><%= scholarship.name %></td>
-        <td><%= scholarship.description %></td>
-        <td><%= scholarship.organization %></td>
+        <td><%= link_to scholarship.name, scholarship %></td>
         <td><%= scholarship.amount %></td>
         <td><%= scholarship.deadline %></td>
-        <td><%= scholarship.eligibility %></td>
-        <td><%= scholarship.link %></td>
         <td><%= link_to 'Show', scholarship %></td>
         <td><%= link_to 'Edit', edit_scholarship_path(scholarship) %></td>
-        <td><%= link_to 'Destroy', scholarship, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
