update to profile pages.  nearly complete at this point

--- a/femmehacks16v2/app/views/profile/profile.html
+++ b/femmehacks16v2/app/views/profile/profile.html
@@ -21,12 +21,13 @@
         <div class="schoolInfo">
           <p class="schoolName">University of Pennsylvania</p>
           <p class="schoolLocation">Philadelphia, PA</p>
-          
+          <a id="addToFav" href="#">Add to Favorite</a>
+
         </div>
       </div>
       <div class="row">
         <!-- Left profile box - Overview -->
-        <div class="col-md-4 cl-sm-6">
+        <div class="col-md-4 col-sm-12 cl-xs-12">
           <div class="box-frame">
             <p class="sectionHeading">Overview</p>
             <div class="subHeading">Public/Private</div>
@@ -59,7 +60,7 @@
           </div> <!-- Close boxframe -->
         </div> <!-- Close main column -->
           <!-- Center profile box - Fin Info -->
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 cl-xs-12">
           <div class="box-frame">
             <p class="sectionHeading">Financial Information</p>
             <div class="subHeading">Tuition and Fees</div>
@@ -80,7 +81,7 @@
           </div> <!-- Close boxframe -->
         </div> <!-- Close main column -->
           <!-- Right profile box - Popular Programs & Student Comments -->
-        <div class="col-md-4 col-sm-6">
+        <div class="col-md-4 col-sm-6 cl-xs-12">
           <div class="box-frame">
             <p class="sectionHeading">Popular Programs</p>
             <p>
