add header on profile 95 percent complete

--- a/femmehacks16v2/app/views/profile/profile.html
+++ b/femmehacks16v2/app/views/profile/profile.html
@@ -25,7 +25,7 @@
 
         </div>
       </div>
-      <div class="row">
+      <div class="scholarshipSection row">
         <!-- Left profile box - Overview -->
         <div class="col-md-4 col-sm-12 cl-xs-12">
           <div class="box-frame">
@@ -73,7 +73,7 @@
             <p>2,000 USD</p>
             <div class="subHeading">Average Loan</div>
             <p>10,000 USD</p>
-            <div class="subHeading">Scholorship Opportunity</div>
+            <div class="subHeading">Scholarship Opportunity</div>
             <p>
               You are viewing as a visitor, sign in and provide your detailed profile for more customized financial information.
               <a href="#">Go sign in>>></a>
