--- a/femmehacks16v2/app/views/profile/style.css
+++ b/femmehacks16v2/app/views/profile/style.css
@@ -32,9 +32,20 @@ h6  {
 }
 
 #addToFav {
-  background-color: red;
+  background-color: red; */
   color: white;
   padding: 2px 10px;
+}
+
+.scholarshipSection {
+  margin-left: 16px; /* should match below */
+  margin-right: 16px; /* should match second margin number in .box-frame */
+}
+
+.box-frame {
+  margin: 36px 16px; /* second number should match both margin settings in scholarshipSection */
+  border: 1px solid darkgray;
+  padding: 12px;
 }
 
 .schoolName {
@@ -46,12 +57,6 @@ h6  {
   font-size: 10px;
   color: white;
 
-}
-
-.box-frame {
-  margin: 36px 16px;
-  border: 1px solid darkgray;
-  padding: 12px;
 }
 
 .sectionHeading {
