--- a/femmehacks16v2/app/assets/stylesheets/welcome.css
+++ b/femmehacks16v2/app/assets/stylesheets/welcome.css
@@ -1,176 +1,3 @@
-html{
-	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
-	box-sizing: border-box; 
-}
-
-#header{
-	height: 50px;
-	width: 100%;
-	background: #1bcdc2;
-	color:white;
-	vertical-align: bottom;
-	margin-top:0;
-	margin-bottom: 0;
-	
-	
-}
-#header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    
-}
-
-#header li {
-    float: left;
-    list-style: none;
-}
-
-#header li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-#header li a:hover {
-	color:black;
-    background-color: ;
-}
-
-#header .active{
-	color:black;
-
-}
-body{
-	background-color: #efefef;
-	color: black;
-	font-family: sans-serif;
-	font-size: 14px;
-}
-
-p{
-	
-}
-
-h1{
-	font-size: 18px;
-	
-}
-h2{
-	font-size: 12px;
-
-
-}
-h4{
-	font-weight: 200;
-	color: #606060;
-	line-height: 0px;
-}
-#body-box{
-	width:95%;
-	height: 100%;
-	margin-top:30px;
-	margin-left: auto;
-	margin-right: auto;
-	background: white;
-	position: relative;
-	
-	
-}
-
-
-
-.filter-box{
-	
-	height:200px;
-	width: 180px;
-	background: #eeeeee;
-	border: #d9d9d9;
-	border-style: solid;
-	border-width: 1px;
-	
-	margin:20px;
-	text-align: center;
-}
-
-.filter-box input{
-	margin-top:10px;
-	margin-left: 10px;
-	
-}
-
-.search-box{
-	
-	border-style: none;
-	
-}
-
-.search-action{
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	background: #1bcdc2;
-	border-style: none;
-	color:white;
-}
-
-#scholarship-list{
-	
-
-	
-}
-
-#scholarship-table, #scholarship-table tr{
-	
-
-	border: black;
-	border-top-style: solid;
-	border-bottom-style: solid;
-	border-color: #e3e3e3;
-	border-width: 1px;
-	border-collapse: collapse;
-	}
-	
-
-#scholarship-table th{
-	font-weight: 600;
-	text-align:center;
-	width:150px;
-	padding:10px;
-}
-
-	
-#scholarship-table td{
-	
-	text-align:center;
-	border: 20px;
-	width:150px;
-	padding-top:20px;
-	padding-bottom:20px;
-}
-
-.page-index{
-	
-	text-align:center;
-	margin-top:30px;
-	
-	
-}
-
-.page-index td{
-	width:20px;
-	height: 20px;
-	margin: 20px;
-	background: #ebebeb;
-	border: white;
-	border-style: solid;
-	
-	}
-
 
 h1 {text-align:center;}
 p {text-align:center;}
@@ -202,7 +29,11 @@ div.transbox p {
     color: gray;
 }
 
-/*WELCOME PAGE */
+<title>Search Box</title>
+<meta name="ROBOTS" content="NOINDEX, NOFOLLOW" />
+
+<!-- CSS styles for standard search box -->
+<style type="text/css">
     #tfheader{
         background-color:#808080;
 
