--- a/femmehacks16v2/app/views/welcome/index.html.erb
+++ b/femmehacks16v2/app/views/welcome/index.html.erb
@@ -1,1 +1,26 @@
-<h1>Find Scholarships!</h1>
+ <head>
+  <style>
+  div.background {
+      background: url('background_college.jpg') no-repeat center center fixed;
+
+      background-size: cover; /* for IE9+, Safari 4.1+, Chrome 3.0+, Firefox 3.6+ */
+          -webkit-background-size: cover; /* for Safari 3.0 - 4.0 , Chrome 1.0 - 3.0 */
+          -moz-background-size: cover; /* optional for Firefox 3.6 */ 
+          -o-background-size: cover; /* for Opera 9.5 */
+          margin: 0; /* to remove the default white margin of body */
+          padding: 0; /* to remove the default white margin of body */
+          overflow: hidden;
+
+}
+</style>
+ </head>
+ <div class="transbox">
+    <p>Find and pay for your dream school</p>
+     <!-- SEARCH BOX -->
+    <div id="tfheader">
+        <form id="tfnewsearch" method="get" action="http://www.google.com">
+                <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
+        </form>
+    <div class="tfclear"></div>
+    </div>
+  </div>
