update link and expand on comments

--- a/femmehacks16v2/app/views/profile/profile.html
+++ b/femmehacks16v2/app/views/profile/profile.html
@@ -103,18 +103,26 @@
           <div class="box-frame">
             <p class="sectionHeading">Student Comments</p>
             <p class="text-right">latest</p>
-            <p>
-              <span class="commentStudentName">Jackie Mai:</span>
-              <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
-            </p>
-            <p>
-              <span class="commentStudentName">Jackie Mai:</span>
-              <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
-            </p>
-            <p>
-              <span class="commentStudentName">Jackie Mai:</span>
-              <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
-            </p>
+            <div class="expandable">
+              <p>
+                <span class="commentStudentName">Jackie Mai:</span>
+                <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
+              </p>
+            </div> <!-- Close expandable -->
+            <div class="expandable">
+              <p>
+                <span class="commentStudentName">Jackie Mai:</span>
+                <span class="commentStudentText">"Beautiful Campus, Love it!"</span>
+              </p>
+            </div> <!-- Close expandable -->
+            <div class="expandable">
+              <p>
+                <span class="commentStudentName">Jackie Mai:</span>
+                <span class="commentStudentText">"Beautiful Campus, Love it! This is extra text to make it wrap
+                  around to another line to test if it will expand automatically.  So far it hasn't been long enough
+                  so hopefully this sentence works as I need it to wrap to 5 lines total."</span>
+              </p>
+            </div> <!-- Close expandable -->
           </div> <!-- Close boxframe -->
         </div> <!-- Close main column -->
       </div> <!-- Close row -->
