--- a/femmehacks16v2/app/views/profile/style.css
+++ b/femmehacks16v2/app/views/profile/style.css
@@ -1,8 +1,3 @@
-h6  {
-  font-weight: bold;
-
-}
-
 .profileHeader{
     background: center no-repeat;
     background-size: 100% auto ;
@@ -21,7 +16,6 @@ h6  {
 }
 
 .schoolInfo {
-  /*overflow:hidden;*/
   padding-top:10px; /*110 remaining minus 10 padding equals 100 */
   float:left;
   padding-left:20px;
@@ -32,9 +26,24 @@ h6  {
 }
 
 #addToFav {
-  background-color: red; */
+  background-color: red;
   color: white;
   padding: 2px 10px;
+}
+
+#addToFav a {
+  color: white;
+  text-decoration: none;
+}
+
+#addToFav:hover {
+  background-color: white;
+  color: red;
+  text-decoration: none;
+}
+
+a:visited, a:active {
+  text-decoration: none;
 }
 
 .scholarshipSection {
@@ -74,8 +83,9 @@ h6  {
 }
 
 .showhide:hover, a:hover{
-  color: green;
-  text-decoration: underline;
+  color: white;
+  background-color: red;
+  text-decoration: none;
 }
 
 .programType {
