--- a/femmehacks16v2/app/assets/stylesheets/style.css
+++ b/femmehacks16v2/app/assets/stylesheets/style.css
@@ -45,133 +45,8 @@ html{
 	color:black;
 
 }
-body{
-	background-color: #efefef;
-	color: black;
-	font-family: sans-serif;
-	font-size: 14px;
-}
 
-p{
-	
-}
-
-h1{
-	font-size: 18px;
-	
-}
-h2{
-	font-size: 12px;
-
-
-}
-h4{
-	font-weight: 200;
-	color: #606060;
-	line-height: 0px;
-}
-#body-box{
-	width:95%;
-	height: 100%;
-	margin-top:30px;
-	margin-left: auto;
-	margin-right: auto;
-	background: white;
-	position: relative;
-	
-	
-}
-
-
-
-.filter-box{
-	
-	height:200px;
-	width: 180px;
-	background: #eeeeee;
-	border: #d9d9d9;
-	border-style: solid;
-	border-width: 1px;
-	
-	margin:20px;
-	text-align: center;
-}
-
-.filter-box input{
-	margin-top:10px;
-	margin-left: 10px;
-	
-}
-
-.search-box{
-	
-	border-style: none;
-	
-}
-
-.search-action{
-	text-align: center;
-	margin-left: auto;
-	margin-right: auto;
-	background: #1bcdc2;
-	border-style: none;
-	color:white;
-}
-
-#scholarship-list{
-	
-
-	
-}
-
-#scholarship-table, #scholarship-table tr{
-	
-
-	border: black;
-	border-top-style: solid;
-	border-bottom-style: solid;
-	border-color: #e3e3e3;
-	border-width: 1px;
-	border-collapse: collapse;
-	}
-	
-
-#scholarship-table th{
-	font-weight: 600;
-	text-align:center;
-	width:150px;
-	padding:10px;
-}
-
-	
-#scholarship-table td{
-	
-	text-align:center;
-	border: 20px;
-	width:150px;
-	padding-top:20px;
-	padding-bottom:20px;
-}
-
-.page-index{
-	
-	text-align:center;
-	margin-top:30px;
-	
-	
-}
-
-.page-index td{
-	width:20px;
-	height: 20px;
-	margin: 20px;
-	background: #ebebeb;
-	border: white;
-	border-style: solid;
-	
-	}
-
-
+/* Index page */
 h1 {text-align:center;}
 p {text-align:center;}
 
@@ -251,3 +126,161 @@ div.transbox p {
     .tfclear{
         clear:both;
     }
+
+/* List Page */
+body{
+	background-color: #efefef;
+	color: black;
+	font-family: sans-serif;
+	font-size: 14px;
+}
+
+a{
+	color: #8c1515;
+}
+
+a:hover{
+	color: #f36b6b;
+	text-decoration: none;
+}
+
+#list-page p{
+	text-align: left;
+}
+
+#list-page h1{
+	
+	font-size: 18px;
+	
+}
+#list-page h2{
+	
+	font-size: 12px;
+
+
+}
+#list-page h4{
+	font-weight: 200;
+	color: #606060;
+	font-size: 14px;
+	line-height: 0px;
+}
+#body-box{
+	width:95%;
+	height: 100%;
+	margin-top:30px;
+	margin-left: auto;
+	margin-right: auto;
+	background: white;
+	position: relative;
+	
+	
+}
+
+
+
+.filter-box{
+	
+	height:200px;
+	width: 180px;
+	background: #eeeeee;
+	border: #d9d9d9;
+	border-style: solid;
+	border-width: 1px;
+	
+	margin:20px;
+	text-align: center;
+}
+
+.filter-box input{
+	margin-top:10px;
+	margin-left: 10px;
+	
+}
+
+.search-box{
+	
+	border-style: none;
+	
+	
+}
+
+.search-by-category{
+	margin-top:10px;
+	
+}
+.search-keywords{
+	color:#9e9e9e
+}
+select {
+	
+}
+
+.search-action{
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+	background: #8c1515;
+	border-style: none;
+	color:white;
+}
+
+#number-of-scholarships {
+	font-weight: 500;
+	margin-top: 10px;
+	color:#8c1515;
+}
+
+#scholarship-list{
+	
+
+	
+}
+
+#scholarship-table, #scholarship-table tr{
+	
+
+	border: black;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-color: #e3e3e3;
+	border-width: 1px;
+	border-collapse: collapse;
+	}
+	
+
+#scholarship-table th{
+	font-weight: 600;
+	text-align:center;
+	width:150px;
+	padding:10px;
+}
+
+	
+#scholarship-table td{
+	
+	text-align:center;
+	border: 20px;
+	width:150px;
+	padding-top:20px;
+	padding-bottom:20px;
+}
+
+.page-index{
+	
+	text-align:center;
+	margin-top:30px;
+	
+	
+}
+
+.page-index td{
+	width:20px;
+	height: 20px;
+	margin: 20px;
+	background: #ebebeb;
+	border: white;
+	border-style: solid;
+	
+	}
+
