--- a/femmehacks16v2/app/views/scholarshipslist/scholarship_page.html
+++ b/femmehacks16v2/app/views/scholarshipslist/scholarship_page.html
@@ -4,14 +4,18 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=0.8,minimum-scale=0.8,maximum-scale=0.8,minimal-ui">
 		<title id="title">Scholarship</title>
-				<script src="jquery.min.js"></script>
+				
+				<script src="http://code.jquery.com/jquery.js"></script>
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
-		<link id="stylesheet" rel="stylesheet" href="style.css">
+		<link id="stylesheet" rel="stylesheet" href="../../assets/stylesheets/style.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+		
+		
 	
 	</head>
 	
 	
-	<body>
+	<body id="list-page">
 		
 			
 			
@@ -20,13 +24,32 @@
 				<div class = "row containers">
 				<div class = "col-md-3">
 					<form class="filter-box" action="">
-						<input class = "search-keywords" type="text" value="keywords"></input>
-						<h4>category</h4>
-							<select name="category">
-								<option value="ctg1">ctg1</option>
-							</select>
-								<br>
-						<input class="search-action" type="submit" value="Search"></form>	
+						<input class = "search-keywords" type="text" value="Search keywords"></input>
+					<br>
+					
+					<div class="btn-group search-by-category">
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Categories <span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+					<li><a href="#">Category1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					
+  					</ul>
+					</div>		
+					
+					<div class="btn-group search-by-amount">
+					<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Amount<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+					<li><a href="#">less than 1000</a></li>
+					<li><a href="#">$1000~$2000</a></li>
+					<li><a href="#">3</a></li>
+					
+  					</ul>
+					</div>		
 				</div>
 			
 				<div id = "scholarship-list col-md-9">
