--- a/femmehacks16v2/app/views/scholarshipslist/scholarship_page.html
+++ b/femmehacks16v2/app/views/scholarshipslist/scholarship_page.html
@@ -66,7 +66,9 @@
 							  </tr>
 							  
 							  <tr class="scholarship-table-items">
-							    <td><a href="">Name</a></td>
+							    <td><a href="">Name</a>
+							    <br>
+							    <img src="" width="100" height="100"/></td>
 							    <td>Category</td>
 							    <td>$9999</td>		
 							    <td>MM-DD-YYYY</td>
