--- a/femmehacks16v2/app/assets/stylesheets/scholarships.scss
+++ b/femmehacks16v2/app/assets/stylesheets/scholarships.scss
@@ -1,3 +1,98 @@
 // Place all the styles related to the Scholarships controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h6  {
+  font-weight: bold;
+
+}
+
+.profileHeader{
+    background: center no-repeat;
+    background-size: 100% auto ;
+    height: 200px; /* 200 tall  */
+    padding-top: 75px; /* 200 remaining minus 75 padding-top equals 125 */
+    padding-bottom: 15px; /* 125 remaining minus 15 padding-bottom equals 110 */
+}
+
+.schoolLogo {
+    margin-left: 30px;
+    float:left;
+}
+
+.schoolLogo img {
+  max-height: 110px;
+}
+
+.schoolInfo {
+  /*overflow:hidden;*/
+  padding-top:10px; /*110 remaining minus 10 padding equals 100 */
+  float:left;
+  padding-left:20px;
+}
+
+.schoolInfo p {
+  margin-bottom: 5px;
+}
+
+#addToFav {
+  background-color: red; */
+  color: white;
+  padding: 2px 10px;
+}
+
+.scholarshipSection {
+  margin-left: 16px; /* should match below */
+  margin-right: 16px; /* should match second margin number in .box-frame */
+}
+
+.box-frame {
+  margin: 36px 16px; /* second number should match both margin settings in scholarshipSection */
+  border: 1px solid darkgray;
+  padding: 12px;
+}
+
+.schoolName {
+  font-size: 30px;
+  color: white;
+}
+
+.schoolLocation {
+  font-size: 10px;
+  color: white;
+
+}
+
+.sectionHeading {
+  font-size: 18px;
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 18px;
+}
+
+.subHeading {
+  font-weight: bold;
+}
+
+.showhide, a{
+  color: red;
+}
+
+.showhide:hover, a:hover{
+  color: green;
+  text-decoration: underline;
+}
+
+.programType {
+  font-weight: bold;
+}
+
+.programDetail {
+
+}
+
+.commentStudentName {
+  font-weight: bold;
+}
+
+.commentStudentText {
+
+}
