updating list page

--- a/femmehacks16v2/app/assets/stylesheets/style.css
+++ b/femmehacks16v2/app/assets/stylesheets/style.css
@@ -7,7 +7,7 @@ html{
 #header{
 	height: 50px;
 	width: 100%;
-	background: #1bcdc2;
+	background: #8c1515;
 	color:white;
 	vertical-align: bottom;
 	margin-top:0;
