removing janky pictures

--- a/femmehacks16v2/app/views/scholarships/index.html.erb
+++ b/femmehacks16v2/app/views/scholarships/index.html.erb
@@ -37,7 +37,7 @@
       
         <div id = "scholarship-list col-md-9">
           
-          <p id="number-of-scholarships"> 1111 Scholarships </p>
+          <p id="number-of-scholarships"> <%= @scholarships.count%> Scholarships </p>
           
           <table id="scholarship-table">
                 <tr class="table-header">
