--- a/femmehacks16v2/app/views/scholarships/show.html.erb
+++ b/femmehacks16v2/app/views/scholarships/show.html.erb
@@ -1,13 +1,7 @@
 <div class="mainsection">
       <div class="profileHeader" style="background-image: url(penn.jpg);">
-        <%= image_tag("penn_logo.png", class: "schoolLogo")%>
-        <div class="schoolLogo">
-          <img src="penn_logo.png" alt="" />
-        </div>
-        <div class="schoolInfo">
-          <p class="schoolName"><%= @scholarship.name %></p>
-
-        </div>
+        
+        <h1><%= @scholarship.name %></h1>
       </div>
       <div class="scholarshipSection row">
         <!-- Left profile box - Overview -->
