adding title WeDream

--- a/femmehacks16v2/app/views/welcome/index.html.erb
+++ b/femmehacks16v2/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
+
  <div class="transbox">
-    <p>Find and pay for your dream school</p>
+     <h1> WEDream </h1>
+    <p>Helping women achieve their dreams.</p>
 
      <!-- SEARCH BOX -->
     <div id="tfheader">
