--- a/femmehacks16v2/app/views/welcome/index.html.erb
+++ b/femmehacks16v2/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
 
  <div class="transbox">
-     <h1> WEDream </h1>
+     <h1> WeDream </h1>
     <p>Helping women achieve their dreams.</p>
+
+<img src="http://studentservices.okstate.edu/sites/default/files/weatpromopic.png" width="100%" height="100%" />
 
      <!-- SEARCH BOX -->
     <div id="tfheader">
